Kernel config changes to CPU govenor settings

--- a/arch/arm/configs/cyanogenmod_v2wifixx_defconfig
+++ b/arch/arm/configs/cyanogenmod_v2wifixx_defconfig
@@ -435,7 +435,7 @@ CONFIG_ASV_MARGIN_TEST=y
 CONFIG_MACH_UNIVERSAL5420=y
 # CONFIG_HA is not set
 # CONFIG_V1A is not set
-CONFIG_V2A=Y
+CONFIG_V2A=y
 # CONFIG_N1A is not set
 # CONFIG_N2A is not set
 # CONFIG_CHAGALL is not set
@@ -690,12 +690,12 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
-# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -1448,7 +1448,7 @@ CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 # CONFIG_WIFI_BROADCOM_COB is not set
-CONFIG_WLAN_REGION_CODE=100 
+CONFIG_WLAN_REGION_CODE=100
 # CONFIG_WIFI_2GHZ_VHT_NO_SUPPORT is not set
 CONFIG_WLAIBSS=y
 CONFIG_SUPPORT_AIBSS=y
