--- a/arch/arm/configs/cyanogenmod_v2wifixx_defconfig
+++ b/arch/arm/configs/cyanogenmod_v2wifixx_defconfig
@@ -48,7 +48,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_POSIX_MQUEUE is not set
@@ -198,15 +198,12 @@ CONFIG_EFI_PARTITION=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_ROW=y
-# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="row"
+CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -454,10 +451,9 @@ CONFIG_V2A_WIFI=y
 # CONFIG_CHAGALL_LTE is not set
 # CONFIG_KLIMT_3G is not set
 # CONFIG_KLIMT_WIFI is not set
-# CONFIG_TARGET_LOCALE_EUR is not set
+CONFIG_TARGET_LOCALE_EUR=y
 # CONFIG_TARGET_LOCALE_KOR is not set
-CONFIG_TARGET_LOCALE_USA=y
-# CONFIG_TARGET_LOCALE_DEMO is not set
+# CONFIG_TARGET_LOCALE_USA is not set
 CONFIG_GPS_BCMxxxxx=y
 # CONFIG_GPS_BCM47511 is not set
 # CONFIG_GPS_BCM4752 is not set
@@ -638,14 +634,7 @@ CONFIG_VIRT_TO_BUS=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
-CONFIG_FRONTSWAP=y
-CONFIG_ZSMALLOC_NEW=y
-CONFIG_PGTABLE_MAPPING=y
-CONFIG_ZSWAP=y
-# CONFIG_SWAP_ENABLE_READAHEAD is not set
-CONFIG_DISABLE_LUMPY_RECLAIM=y
-# CONFIG_DIRECT_RECLAIM_FILE_PAGES_ONLY is not set
-CONFIG_TIGHT_PGDAT_BALANCE=y
+# CONFIG_ZSMALLOC_NEW is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
@@ -690,12 +679,12 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
+CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 
 #
 # ARM CPU frequency scaling drivers
@@ -795,14 +784,14 @@ CONFIG_IP_MULTIPLE_TABLES=y
 # CONFIG_IP_MROUTE is not set
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
-# CONFIG_INET_AH is not set
+CONFIG_INET_AH=y
 CONFIG_INET_ESP=y
-# CONFIG_INET_IPCOMP is not set
-# CONFIG_INET_XFRM_TUNNEL is not set
+CONFIG_INET_IPCOMP=y
+CONFIG_INET_XFRM_TUNNEL=y
 CONFIG_INET_TUNNEL=y
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_INET_XFRM_MODE_TUNNEL=y
-# CONFIG_INET_XFRM_MODE_BEET is not set
+CONFIG_INET_XFRM_MODE_BEET=y
 # CONFIG_INET_LRO is not set
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
@@ -1243,7 +1232,7 @@ CONFIG_UID_STAT=y
 # CONFIG_MUIC_MAX77803_SUPPORT_CAR_DOCK is not set
 CONFIG_MUIC_MAX77803_SUPPORT_MHL_CABLE_DETECTION=y
 # CONFIG_MUIC_MAX77803_SUPPORT_LANHUB is not set
-CONFIG_MUIC_FULL_DUMP_ENABLE=y
+# CONFIG_MUIC_FULL_DUMP_ENABLE is not set
 # CONFIG_WL127X_RFKILL is not set
 CONFIG_TIMA_LOG=y
 # CONFIG_C2PORT is not set
@@ -1447,11 +1436,9 @@ CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/wifi/bcmdhd_sta.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
-# CONFIG_WIFI_BROADCOM_COB is not set
 CONFIG_WLAN_REGION_CODE=100
 # CONFIG_WIFI_2GHZ_VHT_NO_SUPPORT is not set
 CONFIG_WLAIBSS=y
-CONFIG_SUPPORT_AIBSS=y
 CONFIG_BCM4354=y
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
@@ -1574,7 +1561,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_ATMEL_MXTS=y
 # CONFIG_TOUCHSCREEN_ATMEL_MXT540S is not set
 CONFIG_TOUCHSCREEN_ATMEL_MXT1664S=y
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C is not set
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 # CONFIG_INPUT_WACOM is not set
 # CONFIG_EPEN_WACOM_G5SP is not set
 # CONFIG_EPEN_WACOM_G9PM is not set
@@ -2383,6 +2370,7 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_TMIO is not set
 CONFIG_FB_S3C=y
 # CONFIG_FB_MIPI_DSIM is not set
+# CONFIG_FB_HW_TRIGGER is not set
 CONFIG_FB_S5P_MDNIE=y
 # CONFIG_FB_S5P_MDNIE_LITE is not set
 CONFIG_FB_DBLC_PWM=y
@@ -2561,7 +2549,7 @@ CONFIG_HID_THRUSTMASTER=y
 CONFIG_HID_WACOM=y
 CONFIG_HID_WACOM_POWER_SUPPLY=y
 # CONFIG_HID_WIIMOTE is not set
-# CONFIG_HID_ZAGG is not set
+CONFIG_HID_ZAGG=y
 CONFIG_HID_ZEROPLUS=y
 # CONFIG_ZEROPLUS_FF is not set
 CONFIG_HID_ZYDACRON=y
@@ -2751,8 +2739,9 @@ CONFIG_USB_EXYNOS_SS_UDC=y
 # CONFIG_USB_M66592 is not set
 # CONFIG_USB_NET2272 is not set
 # CONFIG_USB_DUMMY_HCD is not set
-# CONFIG_USB_EXYNOS_SS_UDC_SSMODE is not set
+CONFIG_USB_EXYNOS_SS_UDC_SSMODE=y
 CONFIG_USB_GADGET_DUALSPEED=y
+CONFIG_USB_GADGET_SUPERSPEED=y
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
 # CONFIG_USB_ETH is not set
@@ -2766,7 +2755,7 @@ CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
-# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
+CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 # CONFIG_USB_DUN_SUPPORT is not set
 CONFIG_USB_ANDROID_SAMSUNG_SIDESYNC=y
 # CONFIG_USB_CDC_COMPOSITE is not set
@@ -3000,7 +2989,6 @@ CONFIG_SEC_OOM_KILLER=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
-CONFIG_VNSWAP=y
 CONFIG_CLKDEV_LOOKUP=y
 
 #
@@ -3044,7 +3032,7 @@ CONFIG_MOTOR_DRV_MAX77803=y
 # CONFIG_MOTOR_DRV_ISA1400 is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 # CONFIG_HAPTIC_ISA1400 is not set
-# CONFIG_HAPTIC is not set
+CONFIG_HAPTIC=y
 # CONFIG_SENSORS_FINGERPRINT is not set
 # CONFIG_SENSORS_SYSFS is not set
 # CONFIG_SENSORS_SSP is not set
@@ -3060,14 +3048,12 @@ CONFIG_MOTOR_DRV_MAX77803=y
 # CONFIG_SENSORS_SSP_STM32F401 is not set
 # CONFIG_SENSORS_SSP_SENSORHUB is not set
 CONFIG_SENSORS=y
-CONFIG_SENSORS_BMI055=y
-# CONFIG_SENSORS_BMI058 is not set
-CONFIG_SENSORS_AK8963C=y
-# CONFIG_SENSORS_AK09911C is not set
+# CONFIG_SENSORS_BMI055 is not set
+CONFIG_SENSORS_BMI058=y
+# CONFIG_SENSORS_AK8963C is not set
+CONFIG_SENSORS_AK09911C=y
 CONFIG_SENSORS_CM3323=y
-CONFIG_SENSORS_SX9500=y
-CONFIG_SENSORS_SX9500_INIT_TOUCH_THRESHOLD=3000
-CONFIG_SENSORS_SX9500_NORMAL_TOUCH_THRESHOLD=17
+# CONFIG_SENSORS_SX9500 is not set
 # CONFIG_FUELGAUGE_DUMMY is not set
 # CONFIG_FUELGAUGE_MAX17042 is not set
 # CONFIG_FUELGAUGE_MAX17048 is not set
@@ -3195,20 +3181,7 @@ CONFIG_ROMFS_ON_BLOCK=y
 # CONFIG_PSTORE is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_NETWORK_FILESYSTEMS=y
-# CONFIG_NFS_FS is not set
-# CONFIG_NFSD is not set
-# CONFIG_CEPH_FS is not set
-CONFIG_CIFS=y
-# CONFIG_CIFS_STATS is not set
-# CONFIG_CIFS_WEAK_PW_HASH is not set
-# CONFIG_CIFS_UPCALL is not set
-# CONFIG_CIFS_XATTR is not set
-# CONFIG_CIFS_DEBUG2 is not set
-# CONFIG_CIFS_DFS_UPCALL is not set
-# CONFIG_NCP_FS is not set
-# CONFIG_CODA_FS is not set
-# CONFIG_AFS_FS is not set
+# CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="iso8859-1"
 CONFIG_NLS_CODEPAGE_437=y
@@ -3460,7 +3433,7 @@ CONFIG_CRYPTO_HMAC=y
 #
 CONFIG_CRYPTO_CRC32C=y
 # CONFIG_CRYPTO_GHASH is not set
-CONFIG_CRYPTO_MD4=y
+# CONFIG_CRYPTO_MD4 is not set
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_RMD128 is not set
@@ -3498,7 +3471,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
-CONFIG_CRYPTO_LZO=y
+# CONFIG_CRYPTO_LZO is not set
 
 #
 # Random Number Generation
